<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/jogosFragment">

    <fragment
        android:id="@+id/jogosFragment"
        android:name="com.example.jogoscopadomundo2022.ui.uijogos.fragments.JogosFragment"
        android:label="Jogos"
        tools:layout="@layout/fragment_jogos">
        <action
            android:id="@+id/action_jogosFragment_to_detalhesJogoFragment"
            app:destination="@id/detalhesJogoFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalhesJogoFragment"
        android:name="com.example.jogoscopadomundo2022.ui.uijogos.fragments.DetalhesJogoFragment"
        android:label=""
        tools:layout="@layout/fragment_detalhes_jogo">
        <action
            android:id="@+id/action_detalhesJogoFragment_to_jogosFragment"
            app:destination="@id/jogosFragment" />
        <argument
            android:name="partida"
            app:argType="com.example.jogoscopadomundo2022.data.apijogos.Partida" />
    </fragment>

    <fragment
        android:id="@+id/tabelasFragment"
        android:name="com.example.jogoscopadomundo2022.ui.uitabelas.fragments.TabelasFragment"
        android:label="Tabelas"
        tools:layout="@layout/fragment_tabelas"/>

</navigation>