...

        <TextView
            android:id="@+id/tv_rodada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            tools:text="1ª Rodada"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

...
